recieve FCM notifications from console (logcat)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="cardview_radius_seekbar_text">Radius</string>
     <string name="cardview_elevation_seekbar_text">Elevation</string>
     <string name="btn_next" />
+    <string name="default_notification_channel_id">default_channel</string>
 </resources>
